--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
 		<base href="/">
 	</head>
 	<body>
-		<seed-app>loading...</seed-app>
+    <link rel="stylesheet" href="../../node_modules/ng2-material/dist/ng2-material.css">
+    <link rel="stylesheet" href="../../node_modules/ng2-material/dist/font.css">
+
+    <seed-app>loading...</seed-app>
 		<script src="vendor.bundle.js"></script>
 		<script src="bundle.js"></script>
 	</body>
