refactored directory structure to match the styling guide we had adopted

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<base href="/">
 	</head>
 	<body>
-    <seed-app>loading...</seed-app>
+    <inbox-app>loading...</inbox-app>
 		<script src="vendor.bundle.js"></script>
 		<script src="bundle.js"></script>
 	</body>
