Major revamp in app and folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 		<base href="/">
 	</head>
 	<body>
-    <inbox-app>loading...</inbox-app>
+    <main-app>loading...</main-app>
 		<script src="vendor.bundle.js"></script>
 		<script src="bundle.js"></script>
 	</body>
