--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-	<head>
+  <head>
     <meta charset=UTF-8>
-		<title>Order App</title>
-		<base href="/">
-	</head>
-	<body>
-    <main-app>loading...</main-app>
-		<script src="vendor.bundle.js"></script>
-		<script src="bundle.js"></script>
-	</body>
+    <title>Angular2 Seed</title>
+    <base href="/">
+    <link rel="stylesheet" href="index.css"/>
+  </head>
+  <body>
+
+    <main-app>
+      Loading...
+    </main-app>
+
+    <script src="polyfills.bundle.js"></script>
+    <script src="vendor.bundle.js"></script>
+    <script src="app.bundle.js"></script>
+  </body>
 </html>
